--- a/install/020-RoleBinding-strimzi-cluster-operator-NS-AIR.yaml
+++ b/install/020-RoleBinding-strimzi-cluster-operator-NS-AIR.yaml
@@ -1,14 +1,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: strimzi-cluster-operator-topic-operator-delegation
+  name: strimzi-cluster-operator
   labels:
     app: strimzi
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka-operator
+    namespace: kafka-air
 roleRef:
   kind: ClusterRole
-  name: strimzi-topic-operator
+  name: strimzi-cluster-operator-namespaced
   apiGroup: rbac.authorization.k8s.io
