--- a/install/020-RoleBinding-strimzi-cluster-operator.yaml
+++ b/install/020-RoleBinding-strimzi-cluster-operator.yaml
@@ -7,7 +7,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka-test
+    namespace: kafka-operator
 roleRef:
   kind: ClusterRole
   name: strimzi-cluster-operator-namespaced
