--- a/install/031-RoleBinding-strimzi-cluster-operator-entity-operator-delegation.yaml
+++ b/install/031-RoleBinding-strimzi-cluster-operator-entity-operator-delegation.yaml
@@ -9,7 +9,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka-test
+    namespace: kafka-operator
 roleRef:
   kind: ClusterRole
   name: strimzi-entity-operator
