--- a/install/032-RoleBinding-strimzi-cluster-operator-topic-operator-delegation-NS-RES.yaml
+++ b/install/032-RoleBinding-strimzi-cluster-operator-topic-operator-delegation-NS-RES.yaml
@@ -7,7 +7,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka-operator
+    namespace: kafka-res
 roleRef:
   kind: ClusterRole
   name: strimzi-topic-operator
