--- a/install/060-Deployment-strimzi-cluster-operator.yaml
+++ b/install/060-Deployment-strimzi-cluster-operator.yaml
@@ -39,9 +39,7 @@ spec:
               mountPath: /opt/strimzi/custom-config/
           env:
             - name: STRIMZI_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+              value: kafka-res, kafka-air, kafka-dcs
             - name: STRIMZI_FULL_RECONCILIATION_INTERVAL_MS
               value: "120000"
             - name: STRIMZI_OPERATION_TIMEOUT_MS
